--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 #baseURL = "https://guardiome.org"
+baseURL = "https://guardiome.github.io/guardiome.org"
 languageCode = "en-us"
 theme = "hello-friend-ng"
 
