--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,12 @@
-#baseURL = "https://guardiome.org"
-baseURL = "https://guardiome.github.io/guardiome.org"
+baseURL = "https://guardiome.org"
 languageCode = "en-us"
 theme = "hello-friend-ng"
 
 publishDir = "docs"
-googleAnalytics = "UA-107909561-1"
+googleAnalytics = ""
 disqusShortname = ""
 [author]
-  name = "Kwat.org"
+  name = "Guardiome.org"
 
 [params]
   dateform = "Jan 2, 2006"
@@ -27,7 +26,7 @@ disqusShortname = ""
 
 [languages]
   [languages.en]
-    title = "Kwat.org"
+    title = "Guardiome.org"
     subtitle = "Non-profit cancer informatics company"
     keywords = ""
     copyright = ""
