--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 theme = "hello-friend-ng"
 
 publishDir = "docs"
-googleAnalytics = ""
+googleAnalytics = "UA-107909561-1"
 disqusShortname = ""
 [author]
   name = "Guardiome.org"
