--- a/config.toml
+++ b/config.toml
@@ -27,12 +27,12 @@ disqusShortname = ""
 [languages]
   [languages.en]
     title = "Guardiome.org"
-    subtitle = "Non-profit cancer informatics company"
+    subtitle = "Non-profit health informatics company"
     keywords = ""
     copyright = ""
     readOtherPosts = "Read other posts"
 
-    homeSubtitle = "Non-profit cancer informatics company"
+    homeSubtitle = "Non-profit health informatics company"
 
     [languages.en.params.logo]
       logoText = "cd ~"
@@ -60,3 +60,11 @@ disqusShortname = ""
     identifier = "posts"
     name = "Posts"
     url = "/posts"
+
+[[params.social]]
+name = "github"
+url = "https://github.com/guardiome"
+
+[[params.social]]
+name = "email"
+url = "mailto:kwat@guardiome.com"
