--- a/config.toml
+++ b/config.toml
@@ -41,6 +41,11 @@ disqusShortname = ""
       #alt = "Your example logo alt text"
 
 [[menu.main]]
+    identifier = "about"
+    name = "About"
+    url = "/about"
+
+[[menu.main]]
     identifier = "projects"
     name = "Projects"
     url = "https://github.com/guardiome"
