--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ disqusShortname = ""
 [[menu.main]]
     identifier = "projects"
     name = "Projects"
-    url = "https://github.com/guardiome"
+    url = "/projects"
     weight = "2"
 
 [[menu.main]]
@@ -57,12 +57,6 @@ disqusShortname = ""
     name = "Team"
     url = "/team"
     weight = "3"
-
-[[menu.main]]
-    identifier = "posts"
-    name = "Posts"
-    url = "/posts"
-    weight = "4"
 
 [[params.social]]
     name = "email"
