--- a/config.toml
+++ b/config.toml
@@ -16,12 +16,12 @@ theme = "hugo-serif-theme"
     alt = "Guardiome"
 
   [params.homepage_meta_tags]
-    meta_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
-    meta_og_title = "Hugo Serif Theme"
+    meta_description = "Health analytics for childhood cancer."
+    meta_og_title = "Guardiome"
     meta_og_type = "website"
-    meta_og_url = "https://hugo-serif.netlify.com"
-    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-serif-theme/master/images/tn.png"
-    meta_og_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
+    meta_og_url = "https://guardiome.org"
+    meta_og_image = ""
+    meta_og_description = "Health analytics for childhood cancer."
     meta_twitter_card = "summary"
     meta_twitter_site = "@guardiome"
     meta_twitter_creator = "@guardiome"
